<resources>
    <string name="app_name">adso85_lite</string>

    <string name="main_b">Bienvenida</string>


    <!-- String actividad login -->

    <string name="txtLogin">Login</string>
    <string name="txtUsuario">Usuario</string>
    <string name="eLogin">Digite Login</string>
    <string name="txtContrasena">Contraseña</string>
    <string name="eContra">Digite Contraseña</string>
    <string name="btnLogiar">Iniciar Sesión</string>
    <string name="txtRegistro">Crear Usuario!</string>


    <!-- String actividad registro_usuario -->

    <string name="txtRegistroUsuario">Registro</string>

    <string name="txtMenu">Lista Usuarios</string>

    <string-array name="rs_estado">
        <item>
            Sin Estado
        </item>
        <item>
            Activo
        </item>
        <item>
            Inactivo
        </item>
    </string-array>

    <!-- String actividad menu -->

    <string-array name="rs_rol">
        <item>
            Sin rol
        </item>
        <item>
            Administrador
        </item>
        <item>
            Usuario
        </item>
    </string-array>


    <!-- String actividad Lista Usuarios -->
    <string name="lstBtnCrearUsuarios">Crear Usuario</string>

</resources>